# RSDKv5-Decompilation

./: .gitmodules  Makefile  README.md
RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5/RSDK/Audio/NX/: NXAudioDevice.cpp
RSDKv5/RSDK/Audio/Oboe/: OboeAudioDevice.cpp
RSDKv5/RSDK/Audio/SDL2/: SDL2AudioDevice.cpp
RSDKv5/RSDK/Audio/XAudio/: XAudioDevice.cpp  XAudioDevice.hpp
RSDKv5/RSDK/Core/: Link.hpp  ModAPI.cpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Graphics/: Scene3D.cpp  Scene3D.hpp
RSDKv5/RSDK/Graphics/SDL2/: SDL2RenderDevice.cpp
RSDKv5/RSDK/Input/SDL2/: SDL2InputDevice.cpp  SDL2InputDevice.hpp
RSDKv5/RSDK/Scene/: Object.cpp  Scene.cpp
RSDKv5/RSDK/Storage/: Storage.cpp  Text.cpp  Text.hpp
RSDKv5/RSDK/User/Core/: UserCore.cpp  UserCore.hpp  UserStorage.cpp
RSDKv5/RSDK/User/Dummy/: DummyAchievements.cpp  DummyCore.cpp  DummyCore.hpp  DummyStorage.cpp
wiiu/: CMakeLists.txt
